--- a/less/make/aside.less
+++ b/less/make/aside.less
@@ -17,6 +17,13 @@ aside {
 		&.pull-quote-1 {
 			width: 200px;
 			margin-left: 20px;
+			&.pull-left {
+				margin-left: 0px;
+				margin-right: 20px;
+				img {
+					margin-right: 10px;
+				}
+			}
 		}
 	}
 }
